<resources>
    <string name="app_name">SampleProject</string>
    <string name="title_login_username">Username</string>
    <string name="title_login_username_hi">Enter your username</string>
    <string name="title_login_password">Password</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password_hint">Enter your password</string>
    <string name="title_login_infor">Save login infor</string>
    <string name="title_login_button_login" />
    <string name="title_logina_username">Username</string>
    <string name="title_logina_username_hint">Enter your username:</string>
    <string name="title_logina_password">Password</string>
    <string name="title_logina_password_hint">Enter your password:</string>
    <string name="title_logina_infor">Save login information</string>
    <string name="title_logina_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you want to exit?</string>
    <string name="confirm_exit_yes">Yes</string>
    <string name="confirm_exit_no">No</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_product">Product</string>
    <string name="title_order">Orders</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_sales">Sales</string>
    <string name="title_promotion">Promotion</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_category">Category</string>
    <string name="title_settings">Settings</string>
    <string name="title_healthcare">Health care</string>
    <string name="title_salary">Salary</string>
    <string name="string_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer_id</string>
    <string name="title_customer_name">Customer name</string>
    <string name="title_customer_email">Customer email</string>
    <string name="title_customer_phone">Customer phone</string>
    <string name="title_new">NEW</string>
    <string name="title_save">SAVE</string>
    <string name="title_remove">REMOVE</string>
    <string name="title_new_product">New product</string>
    <string name="title_modify_stock">Modify stock</string>
    <string name="title_sync_product">Sync product</string>
    <string name="title_product_detail">Product details</string>
    <string name="title_product_id">Product ID</string>
    <string name="title_product_name">Product name</string>
    <string name="title_product_quantity">Product quantity</string>
    <string name="title_product_price">Price</string>
    <string name="title_product_category_id">Category ID</string>
    <string name="title_product_description">Product Description</string>
    <string name="title_product_image_id">Image ID</string>
    <string name="title_payment">Payment</string>
    <string name="title_telephonie">Telephonie</string>
    <string name="title_contact_name">Contact Name:</string>
    <string name="title_phone_number">Phone Number:</string>
    <string name="title_body">Body:</string>
    <string name="title_viettel">Lọc Viettel</string>
    <string name="title_mobiphone">Lọc Mobiphone</string>
    <string name="title_other">Lọc nhà mạng khác</string>
    <string name="title_multi_threading">Multi Threading</string>
    <string name="title_handler_send_message">Handler send message</string>
    <string name="title_handler_push_message">Handler push message</string>
    <string name="title_async_task">Async task</string>
    <string name="btn_draw">Draw</string>
    <string name="title_number_customer">Number of customers</string>
    <string name="title_load_customer">Load customers</string>

</resources>