<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_new_product"
        android:title="@string/title_new_product"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_modify_stock"
        android:title="@string/title_modify_stock"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_sync_product"
        android:title="@string/title_sync_product"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always">
    </item>

</menu>