<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <!-- Row 1: Employee & Customer -->
            <TableRow>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee" />

                    <TextView
                        android:id="@+id/txtEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_employee"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgCustomer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_customer" />

                    <TextView
                        android:id="@+id/txtCustomer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_customer"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgAdvancedProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_advanced_product" />

                    <TextView
                        android:id="@+id/txtAdvancedProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_advanced_product"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_telephonie" />

                    <TextView
                        android:id="@+id/txt_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_telephonie"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <!-- Row 2: Product & Order -->
            <TableRow>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_product" />

                    <TextView
                        android:id="@+id/txtProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_product"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_order" />

                    <TextView
                        android:id="@+id/txtOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_order"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>





            <!-- Row 5: Category & Settings -->
            <TableRow>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgMultiThreading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_multi_threading" />

                    <TextView
                        android:id="@+id/txtMultiThreading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_multi_threading"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgPayment"
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_payment" />

                    <TextView
                        android:id="@+id/txtPayment"
                        android:layout_width="208dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_payment"
                        android:textAlignment="center"
                        android:textColor="#D92323"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>

